--- a/index.html
+++ b/index.html
@@ -24,13 +24,45 @@
     <div class="info-container">
         <h2 class="info-title">This website is meowsome!</h2>
         <p class="info-text">Curious to discover what's the life of a cat? 
-            You're in the right place! Follow me on my adventure, meet my parents, and have fun!</p>
+            You're in the right place! Follow me on my adventures, meet my parents, and have fun!</p>
         <button><a href=LINK>Let's go!</a></button>
     </div>
         <img class="info-picture"
         src=/pictures/IMG_0207.jpg
         alt="Cat">  
 </div>
-    
+
+<!-- MID SECTION -->
+<div class="mid-container">
+    <div class="mid-title">Learn more about me</div>
+    <div class="mid-groups">
+        <div class="group">
+            <img class="mid-picture""
+            src="/pictures/IMG_0207.jpg"
+            alt="pic1">
+            <div class="mid text">Fun</div>
+        </div>
+        <div class="group">
+            <img class="mid-picture""
+            src="/pictures/IMG_0207.jpg"
+            alt="pic2">
+            <div class="mid text">Food</div>
+        </div>
+        <div class="group">
+            <img class="mid-picture""
+            src="/pictures/IMG_0207.jpg"
+            alt="pic3">
+            <div class="mid text">Outdoor</div>
+        </div>
+        <div class="group">
+            <img class="mid-picture""
+            src="/pictures/IMG_0207.jpg"
+            alt="pic4">
+            <div class="mid text">Family</div>
+        </div>
+    </div>
+
+</div>
+
 </body>
 </html>
