Fixed mid-text class

--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
             <img class="mid-picture""
             src="/pictures/IMG_0207.jpg"
             alt="pic1">
-            <div class="mid text">Fun</div>
+            <div class="mid-text">Fun</div>
         </div>
         <div class="group">
             <img class="mid-picture""
             src="/pictures/IMG_0207.jpg"
             alt="pic2">
-            <div class="mid text">Food</div>
+            <div class="mid-text">Food</div>
         </div>
         <div class="group">
             <img class="mid-picture""
             src="/pictures/IMG_0207.jpg"
             alt="pic3">
-            <div class="mid text">Outdoor</div>
+            <div class="mid-text">Outdoor</div>
         </div>
         <div class="group">
             <img class="mid-picture""
             src="/pictures/IMG_0207.jpg"
             alt="pic4">
-            <div class="mid text">Family</div>
+            <div class="mid-text">Family</div>
         </div>
     </div>
 
