Add QUOTE section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,16 @@
             <div class="mid-text">Family</div>
         </div>
     </div>
+</div>
 
+<!-- QUOTE -->
+<div class="quote">
+    <div class="quote-text">
+        <p><em>Meow meow, meow meow meow, meow.</em></p>
+    </div>
+    <div class="quote-author">
+        <p>Chaussette - 2022</p>
+    </div>
 </div>
 
 </body>
