Add BOTTOM and FOOTER sections / Fixed button classes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2 class="info-title">This website is meowsome!</h2>
         <p class="info-text">Curious to discover what's the life of a cat? 
             You're in the right place! Follow me on my adventures, meet my parents, and have fun!</p>
-        <button><a href=LINK>Let's go!</a></button>
+        <button class="button-info"><a href=LINK>Let's go!</a></button>
     </div>
         <img class="info-picture"
         src=/pictures/IMG_0207.jpg
@@ -66,12 +66,32 @@
 <!-- QUOTE -->
 <div class="quote">
     <div class="quote-text">
-        <p><em>Meow meow, meow meow meow, meow.</em></p>
+        <p><em>Meow, meow, meow, meow, meow, meow.
+            Meow, meow, meow, meow, meow, meow.
+            Meow, meow, meow, meow, meow, meow.
+            Meow, meow, meow, meow, meow, meow.
+            Meow, meow, meow, meow, meow, meow.
+        </em></p>
     </div>
     <div class="quote-author">
-        <p>Chaussette - 2022</p>
+        <p>Chaussette - 5:30AM every morning ❤️️</p>
     </div>
 </div>
 
+<!-- BOTTOM -->
+<div class="bottom">
+    <div class="bottom-container">
+        <div class="bottom-info">
+            <p class="bottom-title">Join me on my adventures!</p>
+            <p class="bottom-text">Stay tuned everyday by joining me on Instagram just by clicking over there!</p>
+        </div>
+        <button class="button-bottom"><a href=https://www.instagram.com/le_journal_de_chaussette/>Follow me</a></button>
+    </div>
+</div>
+
+<!-- FOOTER -->
+<div class="footer">
+    <p>Copyright &copy - The Odin Project </p>
+</div>
 </body>
 </html>
