Add logo + pictures

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     
 <!-- HEADER     -->
 <div class="header">
-    <h1 class="header-title">The Chaussette's Diary 🐱</h1>
-    <ul class="header-links">
-        <li><a href=LINK1>My story</a></li>
-        <li><a href=LINK2>Gallery</a></li>
-        <li><a href=LINK3>Contact</a></li>
-    </ul>
+    <div class="header-group">
+        <img class="logo"
+        src="/pictures/logo.png"
+        alt="logo">
+        <h1 class="header-title">The Chaussette's Diary 🐱</h1>
+    </div>
+        <ul class="header-links">
+            <li><a href=LINK1>My story</a></li>
+            <li><a href=LINK2>Gallery</a></li>
+            <li><a href=LINK3>Contact</a></li>
+        </ul>
 </div>
 
 <!-- INFO -->
@@ -38,27 +43,27 @@
     <div class="mid-groups">
         <div class="group">
             <img class="mid-picture""
-            src="/pictures/IMG_0207.jpg"
+            src="/pictures/play.jpg"
             alt="pic1">
-            <div class="mid-text">Fun</div>
+            <div class="mid-text">Play</div>
         </div>
         <div class="group">
             <img class="mid-picture""
-            src="/pictures/IMG_0207.jpg"
+            src="/pictures/eat.jpg"
             alt="pic2">
-            <div class="mid-text">Food</div>
+            <div class="mid-text">Eat</div>
         </div>
         <div class="group">
             <img class="mid-picture""
-            src="/pictures/IMG_0207.jpg"
+            src="/pictures/sleep.jpg"
             alt="pic3">
-            <div class="mid-text">Outdoor</div>
+            <div class="mid-text">Sleep</div>
         </div>
         <div class="group">
             <img class="mid-picture""
-            src="/pictures/IMG_0207.jpg"
+            src="/pictures/outdoor.jpg"
             alt="pic4">
-            <div class="mid-text">Family</div>
+            <div class="mid-text">Go out</div>
         </div>
     </div>
 </div>
