--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
 
 <!-- INFO -->
 <div class="info">
+    <img class="info-picture"
+        src=/pictures/main.jpg
+        alt="Cat">
     <div class="info-container">
         <h2 class="info-title">This website is meowsome!</h2>
         <p class="info-text">Curious to discover what's the life of a cat? 
             You're in the right place! Follow me on my adventures, meet my parents, and have fun!</p>
         <button class="button-info"><a href=LINK>Let's go!</a></button>
     </div>
-        <img class="info-picture"
-        src=/pictures/IMG_0207.jpg
-        alt="Cat">  
+         
 </div>
 
 <!-- MID SECTION -->
