--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <img class="logo"
         src="/pictures/logo.png"
         alt="logo">
-        <h1 class="header-title">The Chaussette's Diary 🐱</h1>
+        <h1 class="header-title">The Chaussette's Diary</h1>
     </div>
         <ul class="header-links">
-            <li><a href=LINK1>My story</a></li>
-            <li><a href=LINK2>Gallery</a></li>
-            <li><a href=LINK3>Contact</a></li>
+            <li><a href=https://www.instagram.com/le_journal_de_chaussette/>My story</a></li>
+            <li><a href=https://www.instagram.com/le_journal_de_chaussette/>Gallery</a></li>
+            <li><a href=https://www.instagram.com/le_journal_de_chaussette/>Contact</a></li>
         </ul>
 </div>
 
@@ -33,7 +33,7 @@
         <h2 class="info-title">This website is meowsome!</h2>
         <p class="info-text">Curious to discover what's the life of a cat? 
             You're in the right place! Follow me on my adventures, meet my parents, and have fun!</p>
-        <button class="button-info"><a href=LINK>Let's go!</a></button>
+        <button class="button-info"><a href=https://www.instagram.com/le_journal_de_chaussette/>Let's go!</a></button>
     </div>
          
 </div>
