Fixed images link for github

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="header">
     <div class="header-group">
         <img class="logo"
-        src="/pictures/logo.png"
+        src="https://jojorider.github.io/odin-landing_pageV2//pictures/logo.png"
         alt="logo">
         <h1 class="header-title">The Chaussette's Diary</h1>
     </div>
@@ -27,7 +27,7 @@
 <!-- INFO -->
 <div class="info">
     <img class="info-picture"
-        src=/pictures/main.jpg
+        src=https://jojorider.github.io/odin-landing_pageV2//pictures/main.jpg
         alt="Cat">
     <div class="info-container">
         <h2 class="info-title">This website is meowsome!</h2>
@@ -44,25 +44,25 @@
     <div class="mid-groups">
         <div class="group">
             <img class="mid-picture""
-            src="/pictures/play.jpg"
+            src="https://jojorider.github.io/odin-landing_pageV2//pictures/play.jpg"
             alt="pic1">
             <div class="mid-text">Play</div>
         </div>
         <div class="group">
             <img class="mid-picture""
-            src="/pictures/eat.jpg"
+            src="https://jojorider.github.io/odin-landing_pageV2//pictures/eat.jpg"
             alt="pic2">
             <div class="mid-text">Eat</div>
         </div>
         <div class="group">
             <img class="mid-picture""
-            src="/pictures/sleep.jpg"
+            src="https://jojorider.github.io/odin-landing_pageV2//pictures/sleep.jpg"
             alt="pic3">
             <div class="mid-text">Sleep</div>
         </div>
         <div class="group">
             <img class="mid-picture""
-            src="/pictures/outdoor.jpg"
+            src="https://jojorider.github.io/odin-landing_pageV2//pictures/outdoor.jpg"
             alt="pic4">
             <div class="mid-text">Go out</div>
         </div>
