Fixed link typo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- INFO -->
 <div class="info">
     <img class="info-picture"
-        src=https://jojorider.github.io/odin-landing_pageV2//pictures/main.jpg
+        src="https://jojorider.github.io/odin-landing_pageV2//pictures/main.jpg"
         alt="Cat">
     <div class="info-container">
         <h2 class="info-title">This website is meowsome!</h2>
